The modifications are:

mageiasync 0.1.1
------------
	  - bugfix: change the rename dialog box which was not synced.

mageiasync 0.1
------------
	  - initial release.